tests/NormalTests/paczka1/small_fuzzy/76430146.err
Error in line 2: A537 S59 74,9
Error in line 6: Rw3s2uyPlyl A379 58,9
Error in line 4: XxQlMz8wTM S617 25,5
Error in line 3: ZxuoNxfvlpT S59 56,1
Error in line 13: A537 S617 10,54
